i18n/ja/docusaurus-plugin-content-docs/version-10.x/pagination.md
<!-- # Database: Pagination -->
# Database: Pagination

- [Introduction](#introduction)
- [Basic Usage](#basic-usage)
    - [Paginating Query Builder Results](#paginating-query-builder-results)
    - [Paginating Eloquent Results](#paginating-eloquent-results)
    - [Cursor Pagination](#cursor-pagination)
    - [Manually Creating a Paginator](#manually-creating-a-paginator)
    - [Customizing Pagination URLs](#customizing-pagination-urls)
- [Displaying Pagination Results](#displaying-pagination-results)
    - [Adjusting the Pagination Link Window](#adjusting-the-pagination-link-window)
    - [Converting Results to JSON](#converting-results-to-json)
- [Customizing the Pagination View](#customizing-the-pagination-view)
    - [Using Bootstrap](#using-bootstrap)
- [Paginator and LengthAwarePaginator Instance Methods](#paginator-instance-methods)
- [Cursor Paginator Instance Methods](#cursor-paginator-instance-methods)

<a name="introduction"></a>
<!-- ## Introduction -->
## Introduction

<!-- In other frameworks, pagination can be very painful. We hope Laravel's approach to pagination will be a breath of fresh air. Laravel's paginator is integrated with the [query builder](/docs/10.x/queries) and [Eloquent ORM](/docs/10.x/eloquent) and provides convenient, easy-to-use pagination of database records with zero configuration. -->
他のフレームワークでは、ページネーションは非常に面倒な場合があります。 Laravel のページネーションへのアプローチが新風となることを願っています。 Laravel のページネータは [query builder](/docs/10.x/queries) および [Eloquent ORM](/docs/10.x/eloquent) と統合されており、設定なしでデータベース レコードの便利で使いやすいページネーションを提供します。

<!-- By default, the HTML generated by the paginator is compatible with the [Tailwind CSS framework](https://tailwindcss.com/); however, Bootstrap pagination support is also available. -->
デフォルトでは、ページネータによって生成された HTML は [Tailwind CSS framework](https://tailwindcss.com/) と互換性があります。ただし、Bootstrap ページネーションのサポートも利用できます。

<a name="tailwind-jit"></a>
<!-- #### Tailwind JIT -->
#### Tailwind JIT

<!-- If you are using Laravel's default Tailwind pagination views and the Tailwind JIT engine, you should ensure your application's `tailwind.config.js` file's `content` key references Laravel's pagination views so that their Tailwind classes are not purged: -->
Laravel のデフォルトの Tailwind ページネーション ビューと Tailwind JIT エンジンを使用している場合は、Tailwind クラスがパージされないように、アプリケーションの `tailwind.config.js` ファイルの `content` キーが Laravel のページネーション ビューを参照していることを確認する必要があります。

```js
content: [
    './resources/**/*.blade.php',
    './resources/**/*.js',
    './resources/**/*.vue',
    './vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php',
],
```

<a name="basic-usage"></a>
<!-- ## Basic Usage -->
## Basic Usage

<a name="paginating-query-builder-results"></a>
<!-- ### Paginating Query Builder Results -->
### Paginating Query Builder Results

<!-- There are several ways to paginate items. The simplest is by using the `paginate` method on the [query builder](/docs/10.x/queries) or an [Eloquent query](/docs/10.x/eloquent). The `paginate` method automatically takes care of setting the query's "limit" and "offset" based on the current page being viewed by the user. By default, the current page is detected by the value of the `page` query string argument on the HTTP request. This value is automatically detected by Laravel, and is also automatically inserted into links generated by the paginator. -->
アイテムをページ分割するにはいくつかの方法があります。最も簡単な方法は、[query builder](/docs/10.x/queries) または [Eloquent query](/docs/10.x/eloquent) で `paginate` メソッドを使用することです。 `paginate` メソッドは、ユーザーが表示している現在のページに基づいてクエリの「制限」と「オフセット」の設定を自動的に処理します。デフォルトでは、現在のページは、HTTP リクエストの `page` クエリ文字列引数の値によって検出されます。この値は Laravel によって自動的に検出され、ページネータによって生成されたリンクにも自動的に挿入されます。

<!-- In this example, the only argument passed to the `paginate` method is the number of items you would like displayed "per page". In this case, let's specify that we would like to display `15` items per page: -->
この例では、`paginate` メソッドに渡される唯一の引数は、「ページごとに」表示する項目の数です。この場合、ページごとに `15` アイテムを表示することを指定しましょう。

```
<?php

namespace App\Http\Controllers;

use App\Http\Controllers\Controller;
use Illuminate\Support\Facades\DB;
use Illuminate\View\View;

class UserController extends Controller
{
    /**
     * Show all application users.
     */
    public function index(): View
    {
        return view('user.index', [
            'users' => DB::table('users')->paginate(15)
        ]);
    }
}
```

<a name="simple-pagination"></a>
<!-- #### Simple Pagination -->
#### Simple Pagination

<!-- The `paginate` method counts the total number of records matched by the query before retrieving the records from the database. This is done so that the paginator knows how many pages of records there are in total. However, if you do not plan to show the total number of pages in your application's UI then the record count query is unnecessary. -->
`paginate` メソッドは、データベースからレコードを取得する前に、クエリに一致するレコードの総数をカウントします。これは、ページネータがレコードの合計ページ数を知るために行われます。ただし、アプリケーションの UI に合計ページ数を表示する予定がない場合は、レコード数クエリは不要です。

<!-- Therefore, if you only need to display simple "Next" and "Previous" links in your application's UI, you may use the `simplePaginate` method to perform a single, efficient query: -->
したがって、アプリケーションの UI に単純な「次へ」リンクと「前へ」リンクのみを表示する必要がある場合は、`simplePaginate` メソッドを使用して単一の効率的なクエリを実行できます。

```
$users = DB::table('users')->simplePaginate(15);
```

<a name="paginating-eloquent-results"></a>
<!-- ### Paginating Eloquent Results -->
### Paginating Eloquent Results

<!-- You may also paginate [Eloquent](/docs/10.x/eloquent) queries. In this example, we will paginate the `App\Models\User` model and indicate that we plan to display 15 records per page. As you can see, the syntax is nearly identical to paginating query builder results: -->
[Eloquent](/docs/10.x/eloquent) クエリをページ分割することもできます。この例では、`App\Models\User` モデルをページ分割し、1 ページあたり 15 レコードを表示する予定であることを示します。ご覧のとおり、構文はページ分割クエリビルダの結果とほぼ同じです。

```
use App\Models\User;

$users = User::paginate(15);
```

<!-- Of course, you may call the `paginate` method after setting other constraints on the query, such as `where` clauses: -->
もちろん、クエリに `where` 句などの他の制約を設定した後に、`paginate` メソッドを呼び出すこともできます。

```
$users = User::where('votes', '>', 100)->paginate(15);
```

<!-- You may also use the `simplePaginate` method when paginating Eloquent models: -->
Eloquent モデルをページ分割するときに、`simplePaginate` メソッドを使用することもできます。

```
$users = User::where('votes', '>', 100)->simplePaginate(15);
```

<!-- Similarly, you may use the `cursorPaginate` method to cursor paginate Eloquent models: -->
同様に、`cursorPaginate` メソッドを使用して、Eloquent モデルをカーソルでページネーションすることもできます。

```
$users = User::where('votes', '>', 100)->cursorPaginate(15);
```

<a name="multiple-paginator-instances-per-page"></a>
<!-- #### Multiple Paginator Instances per Page -->
#### Multiple Paginator Instances per Page

<!-- Sometimes you may need to render two separate paginators on a single screen that is rendered by your application. However, if both paginator instances use the `page` query string parameter to store the current page, the two paginator's will conflict. To resolve this conflict, you may pass the name of the query string parameter you wish to use to store the paginator's current page via the third argument provided to the `paginate`, `simplePaginate`, and `cursorPaginate` methods: -->
場合によっては、アプリケーションによってレンダリングされる 1 つの画面上に 2 つの別個のページネータをレンダリングする必要がある場合があります。ただし、両方のページネータ インスタンスが `page` クエリ文字列パラメーターを使用して現在のページを保存する場合、2 つのページネータは競合します。この競合を解決するには、`paginate`、`simplePaginate`、および `cursorPaginate` メソッドに提供される 3 番目の引数を介して、ページネータの現在のページを保存するために使用するクエリ文字列パラメーターの名前を渡すことができます。

```
use App\Models\User;

$users = User::where('votes', '>', 100)->paginate(
    $perPage = 15, $columns = ['*'], $pageName = 'users'
);
```

<a name="cursor-pagination"></a>
<!-- ### Cursor Pagination -->
### Cursor Pagination

<!-- While `paginate` and `simplePaginate` create queries using the SQL "offset" clause, cursor pagination works by constructing "where" clauses that compare the values of the ordered columns contained in the query, providing the most efficient database performance available amongst all of Laravel's pagination methods. This method of pagination is particularly well-suited for large data-sets and "infinite" scrolling user interfaces. -->
`paginate` と `simplePaginate` は SQL の「offset」句を使用してクエリを作成しますが、カーソルのページネーションは、クエリに含まれる順序付けされた列の値を比較する「where」句を構築することによって機能し、Laravel のすべてのページネーション メソッドの中で最も効率的なデータベース パフォーマンスを提供します。このページネーション方法は、大規模なデータセットや「無限」スクロールのユーザー インターフェイスに特に適しています。

<!-- Unlike offset based pagination, which includes a page number in the query string of the URLs generated by the paginator, cursor based pagination places a "cursor" string in the query string. The cursor is an encoded string containing the location that the next paginated query should start paginating and the direction that it should paginate: -->
ページネーションによって生成された URL のクエリ文字列にページ番号が含まれるオフセット ベースのページネーションとは異なり、カーソル ベースのページネーションでは、クエリ文字列に「カーソル」文字列が配置されます。カーソルは、次のページ分割されたクエリがページ分割を開始する位置とページ分割の方向を含むエンコードされた文字列です。

```nothing
http://localhost/users?cursor=eyJpZCI6MTUsIl9wb2ludHNUb05leHRJdGVtcyI6dHJ1ZX0
```

<!-- You may create a cursor based paginator instance via the `cursorPaginate` method offered by the query builder. This method returns an instance of `Illuminate\Pagination\CursorPaginator`: -->
クエリビルダが提供する `cursorPaginate` メソッドを使用して、カーソル ベースのページネータ インスタンスを作成できます。このメソッドは、`Illuminate\Pagination\CursorPaginator` のインスタンスを返します。

```
$users = DB::table('users')->orderBy('id')->cursorPaginate(15);
```

<!-- Once you have retrieved a cursor paginator instance, you may [display the pagination results](#displaying-pagination-results) as you typically would when using the `paginate` and `simplePaginate` methods. For more information on the instance methods offered by the cursor paginator, please consult the [cursor paginator instance method documentation](#cursor-paginator-instance-methods). -->
カーソル ページネータ インスタンスを取得したら、`paginate` および `simplePaginate` メソッドを使用するときに通常行うのと同じように、[display the pagination results](#displaying-pagination-results) を実行できます。カーソル ページネータによって提供されるインスタンス メソッドの詳細については、[cursor paginator instance method documentation](#cursor-paginator-instance-methods) を参照してください。

> [!WARNING]
> カーソルのページネーションを利用するには、クエリに「order by」句が含まれている必要があります。さらに、クエリの順序付けに使用される列は、ページ分割するテーブルに属している必要があります。

<a name="cursor-vs-offset-pagination"></a>
<!-- #### Cursor vs. Offset Pagination -->
#### Cursor vs. Offset Pagination

<!-- To illustrate the differences between offset pagination and cursor pagination, let's examine some example SQL queries. Both of the following queries will both display the "second page" of results for a `users` table ordered by `id`: -->
オフセット ページネーションとカーソル ページネーションの違いを説明するために、いくつかの SQL クエリの例を見てみましょう。次のクエリはどちらも、`id` で順序付けされた `users` テーブルの結果の「2 ページ目」を表示します。

```sql
# Offset Pagination...
select * from users order by id asc limit 15 offset 15;

# Cursor Pagination...
select * from users where id > 15 order by id asc limit 15;
```

<!-- The cursor pagination query offers the following advantages over offset pagination: -->
カーソル ページネーション クエリには、オフセット ページネーションに比べて次の利点があります。

<!--
- For large data-sets, cursor pagination will offer better performance if the "order by" columns are indexed. This is because the "offset" clause scans through all previously matched data.
- For data-sets with frequent writes, offset pagination may skip records or show duplicates if results have been recently added to or deleted from the page a user is currently viewing.
-->
- 大規模なデータセットの場合、「order by」列にインデックスが付けられている場合、カーソルのページネーションのパフォーマンスが向上します。これは、「offset」句が以前に一致したすべてのデータをスキャンするためです。
- 書き込みが頻繁に行われるデータセットの場合、ユーザーが現在表示しているページに最近結果が追加または削除された場合、オフセット ページネーションによってレコードがスキップされたり、重複が表示されたりする可能性があります。

<!-- However, cursor pagination has the following limitations: -->
ただし、カーソルのページネーションには次の制限があります。

<!--
- Like `simplePaginate`, cursor pagination can only be used to display "Next" and "Previous" links and does not support generating links with page numbers.
- It requires that the ordering is based on at least one unique column or a combination of columns that are unique. Columns with `null` values are not supported.
- Query expressions in "order by" clauses are supported only if they are aliased and added to the "select" clause as well.
- Query expressions with parameters are not supported.
-->
- `simplePaginate` と同様、カーソル ページネーションは「次へ」と「前へ」リンクを表示するためにのみ使用でき、ページ番号付きのリンクの生成はサポートされていません。
- 少なくとも 1 つの一意の列、または一意の列の組み合わせに基づいて順序付けする必要があります。 `null` 値を含む列はサポートされていません。
- 「order by」句のクエリ式は、エイリアス化され、「select」句にも追加されている場合にのみサポートされます。
- パラメータを含むクエリ式はサポートされていません。

<a name="manually-creating-a-paginator"></a>
<!-- ### Manually Creating a Paginator -->
### Manually Creating a Paginator

<!-- Sometimes you may wish to create a pagination instance manually, passing it an array of items that you already have in memory. You may do so by creating either an `Illuminate\Pagination\Paginator`, `Illuminate\Pagination\LengthAwarePaginator` or `Illuminate\Pagination\CursorPaginator` instance, depending on your needs. -->
場合によっては、ページネーション インスタンスを手動で作成し、メモリ内にすでにある項目の配列を渡したい場合があります。これを行うには、ニーズに応じて、`Illuminate\Pagination\Paginator`、`Illuminate\Pagination\LengthAwarePaginator`、または `Illuminate\Pagination\CursorPaginator` インスタンスを作成します。

<!-- The `Paginator` and `CursorPaginator` classes do not need to know the total number of items in the result set; however, because of this, these classes do not have methods for retrieving the index of the last page. The `LengthAwarePaginator` accepts almost the same arguments as the `Paginator`; however, it requires a count of the total number of items in the result set. -->
`Paginator` クラスと `CursorPaginator` クラスは、結果セット内の項目の合計数を知る必要はありません。ただし、このため、これらのクラスには最後のページのインデックスを取得するメソッドがありません。 `LengthAwarePaginator` は、`Paginator` とほぼ同じ引数を受け入れます。ただし、結果セット内の項目の総数をカウントする必要があります。

<!-- In other words, the `Paginator` corresponds to the `simplePaginate` method on the query builder, the `CursorPaginator` corresponds to the `cursorPaginate` method, and the `LengthAwarePaginator` corresponds to the `paginate` method. -->
つまり、`Paginator` はクエリビルダの `simplePaginate` メソッドに対応し、`CursorPaginator` は `cursorPaginate` メソッドに対応し、`LengthAwarePaginator` は `paginate` メソッドに対応します。

> [!WARNING]
> ページネータ インスタンスを手動で作成する場合は、ページネータに渡す結果の配列を手動で「スライス」する必要があります。これを行う方法がわからない場合は、[array_slice](https://secure.php.net/manual/en/function.array-slice.php) PHP 関数を確認してください。

<a name="customizing-pagination-urls"></a>
<!-- ### Customizing Pagination URLs -->
### Customizing Pagination URLs

<!-- By default, links generated by the paginator will match the current request's URI. However, the paginator's `withPath` method allows you to customize the URI used by the paginator when generating links. For example, if you want the paginator to generate links like `http://example.com/admin/users?page=N`, you should pass `/admin/users` to the `withPath` method: -->
デフォルトでは、ページネータによって生成されたリンクは現在のリクエストの URI と一致します。ただし、ページネータの `withPath` メソッドを使用すると、リンクの生成時にページネータによって使用される URI をカスタマイズできます。たとえば、ページネータで `http://example.com/admin/users?page=N` のようなリンクを生成したい場合は、`/admin/users` を `withPath` メソッドに渡す必要があります。

```
use App\Models\User;

Route::get('/users', function () {
    $users = User::paginate(15);

    $users->withPath('/admin/users');

    // ...
});
```

<a name="appending-query-string-values"></a>
<!-- #### Appending Query String Values -->
#### Appending Query String Values

<!-- You may append to the query string of pagination links using the `appends` method. For example, to append `sort=votes` to each pagination link, you should make the following call to `appends`: -->
`appends` メソッドを使用して、ページ分割リンクのクエリ文字列に追加できます。たとえば、各ページネーション リンクに `sort=votes` を追加するには、`appends` に対して次の呼び出しを行う必要があります。

```
use App\Models\User;

Route::get('/users', function () {
    $users = User::paginate(15);

    $users->appends(['sort' => 'votes']);

    // ...
});
```

<!-- You may use the `withQueryString` method if you would like to append all of the current request's query string values to the pagination links: -->
現在のリクエストのすべてのクエリ文字列値をページネーション リンクに追加したい場合は、`withQueryString` メソッドを使用できます。

```
$users = User::paginate(15)->withQueryString();
```

<a name="appending-hash-fragments"></a>
<!-- #### Appending Hash Fragments -->
#### Appending Hash Fragments

<!-- If you need to append a "hash fragment" to URLs generated by the paginator, you may use the `fragment` method. For example, to append `#users` to the end of each pagination link, you should invoke the `fragment` method like so: -->
ページネータによって生成された URL に「ハッシュ フラグメント」を追加する必要がある場合は、`fragment` メソッドを使用できます。たとえば、各ページネーション リンクの末尾に `#users` を追加するには、次のように `fragment` メソッドを呼び出す必要があります。

```
$users = User::paginate(15)->fragment('users');
```

<a name="displaying-pagination-results"></a>
<!-- ## Displaying Pagination Results -->
## Displaying Pagination Results

<!-- When calling the `paginate` method, you will receive an instance of `Illuminate\Pagination\LengthAwarePaginator`, while calling the `simplePaginate` method returns an instance of `Illuminate\Pagination\Paginator`. And, finally, calling the `cursorPaginate` method returns an instance of `Illuminate\Pagination\CursorPaginator`. -->
`paginate` メソッドを呼び出すと、`Illuminate\Pagination\LengthAwarePaginator` のインスタンスを受け取りますが、`simplePaginate` メソッドを呼び出すと、`Illuminate\Pagination\Paginator` のインスタンスを返します。最後に、`cursorPaginate` メソッドを呼び出すと、`Illuminate\Pagination\CursorPaginator` のインスタンスが返されます。

<!-- These objects provide several methods that describe the result set. In addition to these helper methods, the paginator instances are iterators and may be looped as an array. So, once you have retrieved the results, you may display the results and render the page links using [Blade](/docs/10.x/blade): -->
これらのオブジェクトは、結果セットを記述するいくつかのメソッドを提供します。これらのヘルパ メソッドに加えて、ページネータ インスタンスはイテレータであり、配列としてループすることができます。したがって、結果を取得したら、[Blade](/docs/10.x/blade) を使用して結果を表示し、ページ リンクをレンダリングできます。

```blade
<div class="container">
    @foreach ($users as $user)
        {{ $user->name }}
    @endforeach
</div>

{{ $users->links() }}
```

<!-- The `links` method will render the links to the rest of the pages in the result set. Each of these links will already contain the proper `page` query string variable. Remember, the HTML generated by the `links` method is compatible with the [Tailwind CSS framework](https://tailwindcss.com). -->
`links` メソッドは、結果セット内の残りのページへのリンクをレンダリングします。これらの各リンクには、適切な `page` クエリ文字列変数がすでに含まれています。 `links` メソッドによって生成された HTML は、[Tailwind CSS framework](https://tailwindcss.com) と互換性があることに注意してください。

<a name="adjusting-the-pagination-link-window"></a>
<!-- ### Adjusting the Pagination Link Window -->
### Adjusting the Pagination Link Window

<!-- When the paginator displays pagination links, the current page number is displayed as well as links for the three pages before and after the current page. Using the `onEachSide` method, you may control how many additional links are displayed on each side of the current page within the middle, sliding window of links generated by the paginator: -->
ページネータにページネーション リンクが表示されると、現在のページ番号に加えて、現在のページの前後 3 ページのリンクも表示されます。 `onEachSide` メソッドを使用すると、ページネータによって生成されたリンクの中央のスライディング ウィンドウ内の現在のページの両側に表示される追加リンクの数を制御できます。

```blade
{{ $users->onEachSide(5)->links() }}
```

<a name="converting-results-to-json"></a>
<!-- ### Converting Results to JSON -->
### Converting Results to JSON

<!-- The Laravel paginator classes implement the `Illuminate\Contracts\Support\Jsonable` Interface contract and expose the `toJson` method, so it's very easy to convert your pagination results to JSON. You may also convert a paginator instance to JSON by returning it from a route or controller action: -->
Laravel のページネータ クラスは、`Illuminate\Contracts\Support\Jsonable` インターフェイス コントラクトを実装し、`toJson` メソッドを公開するため、ページネーションの結果を JSON に変換するのは非常に簡単です。ルートまたはコントローラ アクションからページネータ インスタンスを返すことによって、ページネータ インスタンスを JSON に変換することもできます。

```
use App\Models\User;

Route::get('/users', function () {
    return User::paginate();
});
```

<!-- The JSON from the paginator will include meta information such as `total`, `current_page`, `last_page`, and more. The result records are available via the `data` key in the JSON array. Here is an example of the JSON created by returning a paginator instance from a route: -->
ページネータからの JSON には、`total`、`current_page`、`last_page` などのメタ情報が含まれます。結果レコードは、JSON 配列の `data` キーを介して利用できます。以下は、ルートからページネータ インスタンスを返すことによって作成された JSON の例です。

```
{
   "total": 50,
   "per_page": 15,
   "current_page": 1,
   "last_page": 4,
   "first_page_url": "http://laravel.app?page=1",
   "last_page_url": "http://laravel.app?page=4",
   "next_page_url": "http://laravel.app?page=2",
   "prev_page_url": null,
   "path": "http://laravel.app",
   "from": 1,
   "to": 15,
   "data":[
        {
            // Record...
        },
        {
            // Record...
        }
   ]
}
```

<a name="customizing-the-pagination-view"></a>
<!-- ## Customizing the Pagination View -->
## Customizing the Pagination View

<!-- By default, the views rendered to display the pagination links are compatible with the [Tailwind CSS](https://tailwindcss.com) framework. However, if you are not using Tailwind, you are free to define your own views to render these links. When calling the `links` method on a paginator instance, you may pass the view name as the first argument to the method: -->
デフォルトでは、ページネーション リンクを表示するためにレンダリングされるビューは、[Tailwind CSS](https://tailwindcss.com) フレームワークと互換性があります。ただし、Tailwind を使用していない場合は、これらのリンクをレンダリングする独自のビューを自由に定義できます。ページネータ インスタンスで `links` メソッドを呼び出す場合、最初の引数としてビュー名をメソッドに渡すことができます。

```blade
{{ $paginator->links('view.name') }}

<!-- Passing additional data to the view... -->
{{ $paginator->links('view.name', ['foo' => 'bar']) }}
```

<!-- However, the easiest way to customize the pagination views is by exporting them to your `resources/views/vendor` directory using the `vendor:publish` command: -->
ただし、ページネーション ビューをカスタマイズする最も簡単な方法は、`vendor:publish` コマンドを使用してページネーション ビューを `resources/views/vendor` ディレクトリにエクスポートすることです。

```shell
php artisan vendor:publish --tag=laravel-pagination
```

<!-- This command will place the views in your application's `resources/views/vendor/pagination` directory. The `tailwind.blade.php` file within this directory corresponds to the default pagination view. You may edit this file to modify the pagination HTML. -->
このコマンドは、アプリケーションの `resources/views/vendor/pagination` ディレクトリにビューを配置します。このディレクトリ内の `tailwind.blade.php` ファイルは、デフォルトのページネーション ビューに対応します。このファイルを編集して、ページネーション HTML を変更できます。

<!-- If you would like to designate a different file as the default pagination view, you may invoke the paginator's `defaultView` and `defaultSimpleView` methods within the `boot` method of your `App\Providers\AppServiceProvider` class: -->
別のファイルをデフォルトのページネーション ビューとして指定したい場合は、`App\Providers\AppServiceProvider` クラスの `boot` メソッド内で、ページネータの `defaultView` メソッドと `defaultSimpleView` メソッドを呼び出すことができます。

```
<?php

namespace App\Providers;

use Illuminate\Pagination\Paginator;
use Illuminate\Support\ServiceProvider;

class AppServiceProvider extends ServiceProvider
{
    /**
     * Bootstrap any application services.
     */
    public function boot(): void
    {
        Paginator::defaultView('view-name');

        Paginator::defaultSimpleView('view-name');
    }
}
```

<a name="using-bootstrap"></a>
<!-- ### Using Bootstrap -->
### Using Bootstrap

<!-- Laravel includes pagination views built using [Bootstrap CSS](https://getbootstrap.com/). To use these views instead of the default Tailwind views, you may call the paginator's `useBootstrapFour` or `useBootstrapFive` methods within the `boot` method of your `App\Providers\AppServiceProvider` class: -->
Laravel には、[Bootstrap CSS](https://getbootstrap.com/) を使用して構築されたページ分割ビューが含まれています。デフォルトの Tailwind ビューの代わりにこれらのビューを使用するには、`App\Providers\AppServiceProvider` クラスの `boot` メソッド内で、ページネータの `useBootstrapFour` メソッドまたは `useBootstrapFive` メソッドを呼び出すことができます。

```
use Illuminate\Pagination\Paginator;

/**
 * Bootstrap any application services.
 */
public function boot(): void
{
    Paginator::useBootstrapFive();
    Paginator::useBootstrapFour();
}
```

<a name="paginator-instance-methods"></a>
<!-- ## Paginator / LengthAwarePaginator Instance Methods -->
## Paginator / LengthAwarePaginator Instance Methods

<!-- Each paginator instance provides additional pagination information via the following methods: -->
各ページネータ インスタンスは、次のメソッドを介して追加のページネーション情報を提供します。

<!--
Method  |  Description
-------  |  -----------
`$paginator->count()`  |  Get the number of items for the current page.
`$paginator->currentPage()`  |  Get the current page number.
`$paginator->firstItem()`  |  Get the result number of the first item in the results.
`$paginator->getOptions()`  |  Get the paginator options.
`$paginator->getUrlRange($start, $end)`  |  Create a range of pagination URLs.
`$paginator->hasPages()`  |  Determine if there are enough items to split into multiple pages.
`$paginator->hasMorePages()`  |  Determine if there are more items in the data store.
`$paginator->items()`  |  Get the items for the current page.
`$paginator->lastItem()`  |  Get the result number of the last item in the results.
`$paginator->lastPage()`  |  Get the page number of the last available page. (Not available when using `simplePaginate`).
`$paginator->nextPageUrl()`  |  Get the URL for the next page.
`$paginator->onFirstPage()`  |  Determine if the paginator is on the first page.
`$paginator->perPage()`  |  The number of items to be shown per page.
`$paginator->previousPageUrl()`  |  Get the URL for the previous page.
`$paginator->total()`  |  Determine the total number of matching items in the data store. (Not available when using `simplePaginate`).
`$paginator->url($page)`  |  Get the URL for a given page number.
`$paginator->getPageName()`  |  Get the query string variable used to store the page.
`$paginator->setPageName($name)`  |  Set the query string variable used to store the page.
`$paginator->through($callback)`  |  Transform each item using a callback.
-->
方法 |  説明
-------  |  -----------
`$paginator->count()` |  現在のページの項目数を取得します。
`$paginator->currentPage()` |  現在のページ番号を取得します。
`$paginator->firstItem()` |  結果の最初の項目の結果番号を取得します。
`$paginator->getOptions()` |  ページネータのオプションを取得します。
`$paginator->getUrlRange($start, $end)` |  一連のページネーション URL を作成します。
`$paginator->hasPages()` |  複数のページに分割するのに十分な項目があるかどうかを判断します。
`$paginator->hasMorePages()` |  データ ストアにさらにアイテムがあるかどうかを確認します。
`$paginator->items()` |  現在のページのアイテムを取得します。
`$paginator->lastItem()` |  結果の最後の項目の結果番号を取得します。
`$paginator->lastPage()` |  最後に利用可能なページのページ番号を取得します。 (`simplePaginate` を使用する場合は使用できません)。
`$paginator->nextPageUrl()` |  次のページの URL を取得します。
`$paginator->onFirstPage()` |  ページネータが最初のページにあるかどうかを確認します。
`$paginator->perPage()` |  ページごとに表示される項目の数。
`$paginator->previousPageUrl()` |  前のページの URL を取得します。
`$paginator->total()` |  データ ストア内の一致するアイテムの総数を確認します。 (`simplePaginate` を使用する場合は使用できません)。
`$paginator->url($page)` |  指定されたページ番号の URL を取得します。
`$paginator->getPageName()` |  ページの保存に使用されるクエリ文字列変数を取得します。
`$paginator->setPageName($name)` |  ページの保存に使用されるクエリ文字列変数を設定します。
`$paginator->through($callback)` |  コールバックを使用して各項目を変換します。

<a name="cursor-paginator-instance-methods"></a>
<!-- ## Cursor Paginator Instance Methods -->
## Cursor Paginator Instance Methods

<!-- Each cursor paginator instance provides additional pagination information via the following methods: -->
各カーソル ページネーション インスタンスは、次のメソッドを介して追加のページネーション情報を提供します。

<!--
Method  |  Description
-------  |  -----------
`$paginator->count()`  |  Get the number of items for the current page.
`$paginator->cursor()`  |  Get the current cursor instance.
`$paginator->getOptions()`  |  Get the paginator options.
`$paginator->hasPages()`  |  Determine if there are enough items to split into multiple pages.
`$paginator->hasMorePages()`  |  Determine if there are more items in the data store.
`$paginator->getCursorName()`  |  Get the query string variable used to store the cursor.
`$paginator->items()`  |  Get the items for the current page.
`$paginator->nextCursor()`  |  Get the cursor instance for the next set of items.
`$paginator->nextPageUrl()`  |  Get the URL for the next page.
`$paginator->onFirstPage()`  |  Determine if the paginator is on the first page.
`$paginator->onLastPage()`  |  Determine if the paginator is on the last page.
`$paginator->perPage()`  |  The number of items to be shown per page.
`$paginator->previousCursor()`  |  Get the cursor instance for the previous set of items.
`$paginator->previousPageUrl()`  |  Get the URL for the previous page.
`$paginator->setCursorName()`  |  Set the query string variable used to store the cursor.
`$paginator->url($cursor)`  |  Get the URL for a given cursor instance.
-->
方法 |  説明
-------  |  -----------
`$paginator->count()` |  現在のページの項目数を取得します。
`$paginator->cursor()` |  現在のカーソルインスタンスを取得します。
`$paginator->getOptions()` |  ページネータのオプションを取得します。
`$paginator->hasPages()` |  複数のページに分割するのに十分な項目があるかどうかを判断します。
`$paginator->hasMorePages()` |  データ ストアにさらにアイテムがあるかどうかを確認します。
`$paginator->getCursorName()` |  カーソルを格納するために使用されるクエリ文字列変数を取得します。
`$paginator->items()` |  現在のページのアイテムを取得します。
`$paginator->nextCursor()` |  次の項目セットのカーソル インスタンスを取得します。
`$paginator->nextPageUrl()` |  次のページの URL を取得します。
`$paginator->onFirstPage()` |  ページネータが最初のページにあるかどうかを確認します。
`$paginator->onLastPage()` |  ページネータが最後のページにあるかどうかを確認します。
`$paginator->perPage()` |  ページごとに表示される項目の数。
`$paginator->previousCursor()` |  前の項目セットのカーソル インスタンスを取得します。
`$paginator->previousPageUrl()` |  前のページの URL を取得します。
`$paginator->setCursorName()` |  カーソルを格納するために使用されるクエリ文字列変数を設定します。
`$paginator->url($cursor)` |  指定されたカーソル インスタンスの URL を取得します。

